--- a/index.html
+++ b/index.html
@@ -2,15 +2,47 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>HREXT08 R00lz!</title>
 	<script
 		src="https://code.jquery.com/jquery-3.3.1.js"
 		integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 		crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+	
+	<link rel="stylesheet" href="css/normalize.min.css" />
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<section class="navigation">
+  <div class="nav-container">
+    <div class="brand">
+      <a href="#!">BLOG</a>
+    </div>
+    <nav>
+      <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+      <ul class="nav-list">
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li>
+          <a href="#!">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</section>
+
+<article>
+  <h2>Navigation</h2>
+  <p>Simple, responsive navigation.</p>
+</article>
+
+
 	<div class="container">
 		<form action="" method="" class="form">
 			<div class="form">
@@ -54,6 +86,5 @@
    corgi gif
    cowbell sound
   -->
-
 </body>
 </html>
