Added styling for blog posts and removed the table previously there. Blog posts wrap around text to prevent it from running off the page. Maybe add timestamp to blogposts. Probably won't have time to sort blog posts by date. Definitely advanced requirement.

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 	<!-- blog input -->
 	<div class="container flex-container" id="blog-input">
 		<form action="" method="" class="form">
-			<div class="form">
-				<label for="key">Enter key: </label>
+			<div class="form" id="title">
+				<label for="key">Title: </label>
 				<input type="text" name="key" id="key" required>
 			</div>
 			<div class="form">
-				<label for="value">Enter value: </label>
-				<input type="text" name="value" id="value" required>
+				<label for="value" id="subject">Subject: </label>
+				<textarea type="text" name="value" id="value" required rows="20" cols="80">></textarea> 
 			</div>
 			<div class="form">
 				<button class="button" id="btn-create" type="button">Create</button>
@@ -64,23 +64,23 @@
 	</div>
 
 	<!-- localStorage of all blogposts -->
-	<div class="blog-storage container flex-container" id='localStorage'>
-		<table>
+	<article class="blog-storage container flex-container" id='localStorage'>
+	<!-- 	<table>
 			<thead>
 				<tr>
 					<th>Key</th>
 					<th>Value</th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr>
+ 				<tbody> -->
+				<!-- <tr>
 					<td>test key</td>
 					<td>test value</td>
-				</tr>
-			</tbody>
-		</table>
+				</tr> -->
+			<!-- </tbody> -->
+		<!-- </table> -->
 		
-	</div>
+	</article>
 
 	<script src="app/app.js"></script>
   <!--
