Finished basic reqs. Couldn't figure out date timestamp for new posts. Will revisit eventually... Updated README with resources, basic reqs, and advanced reqs.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	          <a href="index.html">Home</a>
 	        </li>
 	        <li>
-	          <a href="about.html">About</a>
+	          <a href="https://github.com/kszeto1/hrext08-my-cruddy-app" target="_blank">About</a>
 	        </li>
 	        <li>
-	          <a href="#!">Contact</a>
+	          <a href="https://github.com/kszeto1" target="_blank">Contact</a>
 	        </li>
 	      </ul>
 	    </nav>
@@ -60,7 +60,7 @@
 			</div>
 			<!-- clear button? -->
 		</form>	
-		<div id="status-label">Status:</div>
+		<div id="statusLabel">Status:</div>
 	</div>
 
 	<!-- localStorage of all blogposts -->
