--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="form">
 				<label for="value" id="subject">Subject: </label>
-				<textarea type="text" name="value" id="value" required rows="20" cols="80">></textarea> 
+				<textarea type="text" name="value" id="value" required rows="20" cols="80"></textarea> 
 			</div>
 			<div class="form">
 				<button class="button" id="btn-create" type="button">Create</button>
